--- a/Ang2-Esri-NetCore/src/Ang2-Esri-NetCore/package.json
+++ b/Ang2-Esri-NetCore/src/Ang2-Esri-NetCore/package.json
@@ -7,25 +7,25 @@
     "typings": "typings"
   },
   "dependencies": {
-    "@angular/common": "~2.0.2",
-    "@angular/compiler": "~2.0.2",
-    "@angular/compiler-cli": "0.6.4",
-    "@angular/core": "~2.0.2",
-    "@angular/forms": "~2.0.2",
-    "@angular/http": "~2.0.2",
-    "@angular/platform-browser": "~2.0.2",
-    "@angular/platform-browser-dynamic": "~2.0.2",
-    "@angular/platform-server": "~2.0.2",
-    "@angular/router": "~3.0.2",
-    "@angular/upgrade": "~2.0.2",
-    "angular-in-memory-web-api": "~0.1.5",
+    "@angular/common": "~2.2.0",
+    "@angular/compiler": "~2.2.0",
+    "@angular/compiler-cli": "2.2.0",
+    "@angular/core": "~2.2.0",
+    "@angular/forms": "~2.2.0",
+    "@angular/http": "~2.2.0",
+    "@angular/platform-browser": "~2.2.0",
+    "@angular/platform-browser-dynamic": "~2.2.0",
+    "@angular/platform-server": "~2.2.0",
+    "@angular/router": "~3.2.0",
+    "@angular/upgrade": "~2.2.0",
+    "angular-in-memory-web-api": "~0.1.15",
     "esri-system-js": "^1.0.0-beta.0",
     "bootstrap": "3.3.6",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
+    "rxjs": "5.0.0-rc.2",
+    "systemjs": "0.19.41",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "dojo-typings": "1.11.3",
