--- a/Ang2-Esri-NetCore/src/Ang2-Esri-NetCore/tsconfig.aot.json
+++ b/Ang2-Esri-NetCore/src/Ang2-Esri-NetCore/tsconfig.aot.json
@@ -3,14 +3,18 @@
     "target": "es5",
     "module": "es2015",
     "moduleResolution": "node",
-    "sourceMap": true,
+    //"sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "wwwroot/",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "lib": [ "es2015", "dom", "scripthost" ],
+    "typeRoots": [
+      "./node_modules/@types/"
+    ]
   },
   "exclude": [
     "node_modules",
