--- a/angular2-esri-netcore/src/angular2-esri-netcore/package.json
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/package.json
@@ -19,6 +19,7 @@
     "@angular/upgrade": "~2.2.4",
     "angular-in-memory-web-api": "~0.2.4",
     "bootstrap": "3.3.6",
+    "font-awesome": "4.7.0",
     "core-js": "^2.4.1",
     "esri-system-js": "^1.0.0-beta.0",
 
