--- a/angular2-esri-netcore/src/angular2-esri-netcore/package.json
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.0.0",
-  "name": "Ang2-Esri-NetCore",
+  "name": "angular2-esri-netcore",
   "private": true,
   "scripts": {
     "postinstall": "gulp build:dev"
@@ -35,7 +35,7 @@
     "gulp-sourcemaps": "1.6.0",
     "run-sequence": "1.2.2",
     "del": "2.2.2",
-    "typescript": "^2.1.5",
+    "typescript": "2.0.10",
     "gulp-typescript": "^3.1.4",
     "rollup": "^0.41.1",
     "rollup-plugin-node-resolve": "^2.0.0",
