--- a/angular2-esri-netcore/src/angular2-esri-netcore/project.json
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/project.json
@@ -42,7 +42,12 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "Views",
+      "web.config",
+      "StaticFiles"
+    ],
+    "exclude": [
+      "node_modules"
     ]
   },
 
