--- a/angular2-esri-netcore/src/angular2-esri-netcore/package.json
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/package.json
@@ -6,17 +6,17 @@
     "postinstall": "gulp build:dev"
   },
   "dependencies": {
-    "@angular/common": "~2.2.4",
-    "@angular/compiler": "~2.2.4",
-    "@angular/compiler-cli": "2.2.4",
-    "@angular/core": "~2.2.4",
-    "@angular/forms": "~2.2.4",
-    "@angular/http": "~2.2.4",
-    "@angular/platform-browser": "~2.2.4",
-    "@angular/platform-browser-dynamic": "~2.2.4",
-    "@angular/platform-server": "~2.2.4",
-    "@angular/router": "~3.2.4",
-    "@angular/upgrade": "~2.2.4",
+    "@angular/common": "4.0.0-rc.3",
+    "@angular/compiler": "4.0.0-rc.3",
+    "@angular/compiler-cli": "4.0.0-rc.3",
+    "@angular/core": "4.0.0-rc.3",
+    "@angular/forms": "4.0.0-rc.3",
+    "@angular/http": "4.0.0-rc.3",
+    "@angular/platform-browser": "4.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "4.0.0-rc.3",
+    "@angular/platform-server": "4.0.0-rc.3",
+    "@angular/router": "4.0.0-rc.3",
+    "@angular/upgrade": "4.0.0-rc.3",
     "angular-in-memory-web-api": "~0.2.4",
     "bootstrap": "3.3.6",
     "font-awesome": "4.7.0",
@@ -35,13 +35,13 @@
     "gulp-sourcemaps": "1.6.0",
     "run-sequence": "1.2.2",
     "del": "2.2.2",
-    "typescript": "2.0.10",
+    "typescript": "2.2.1",
     "gulp-typescript": "^3.1.4",
-    "rollup": "^0.41.1",
+    "rollup": "^0.41.5",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-commonjs": "^4.1.0",
     "rollup-plugin-uglify": "^1.0.1",
 
-    "@types/arcgis-js-api": "4.2.0"
+    "@types/arcgis-js-api": "4.3.0"
   }
 }
